# pcos-app

./: .editorconfig  .gitignore  AGENTS.md  DESIGN.md  DOCUMENTATION.md  Makefile  docker-compose.yml
.github/workflows/: ci.yml
app/: DEVELOPMENT.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/app/: app.dart
app/lib/core/database/: app_database.dart  app_database.g.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/test/: test_helpers.dart  widget_test.dart
app/test/features/: medication_list_controller_test.dart  report_preview_controller_test.dart  tracking_controller_test.dart
app/test/repositories/: local_repository_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
backend/: DEVELOPMENT.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260328_000001_initial.py
backend/src/api/: config.py  dependencies.py  logging_config.py  main.py
backend/src/api/data/: evidence_articles.py
backend/src/api/db/: models.py  session.py
backend/src/api/repositories/: content_repository.py
backend/src/api/routers/: content.py  reports.py  system.py
backend/src/api/schemas/: content.py  reports.py  system.py
backend/src/api/services/: report_preview.py
backend/tests/: test_content.py  test_migrations.py  test_reports.py  test_system.py
(+41 files in other folders)
