[project]
name = "api"
version = "0.1.0"
description = "FastAPI foundation for the PCOS companion app"
readme = "DEVELOPMENT.md"
authors = [
    { name = "sajiiid09", email = "aronno902553@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.18.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "greenlet>=3.2.4",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.42.0",
]

[project.scripts]
api = "api.main:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
